Tutorial 3: Autentikasi, Cookies, Sessions; Selesai

--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -15,8 +15,16 @@
 <a href="{% url 'main:create_news' %}">
   <button>+ Add News</button>
 </a>
-
+<a href="{% url 'main:logout' %}"><button>Logout</button></a>
+<h5>Sesi terakhir login: {{ last_login }}</h5>
 <hr>
+
+<a href="?filter=all">
+  <button type="button">All Articles</button>
+</a>
+<a href="?filter=my">
+  <button type="button">My Articles</button>
+</a>
 
 {% if not news_list %}
 <p>Belum ada data berita pada football news.</p>
